--- a/create_data.ipynb
+++ b/create_data.ipynb
@@ -1,1 +1,89 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"create_data.ipynb","provenance":[],"mount_file_id":"1GxTjkg2De8sl9FJTq5youiu_m2KJ_UvM","authorship_tag":"ABX9TyOo/J+YtXtR+wB8FIPwiu3Z"},"kernelspec":{"name":"python3","display_name":"Python 3"}},"cells":[{"cell_type":"code","metadata":{"id":"iOXiaoS4EvTR","colab":{"base_uri":"https://localhost:8080/"},"executionInfo":{"status":"ok","timestamp":1611795824845,"user_tz":-480,"elapsed":46105,"user":{"displayName":"吳貞宜","photoUrl":"https://lh3.googleusercontent.com/a-/AOh14GhIOzgYhbporG1Eax-zD0HNdC2UZr8CRTfHsZcY5g=s64","userId":"00889427696288622203"}},"outputId":"ecca7e79-5c48-417d-b32d-6028274c9302"},"source":["import cv2\r\n","from pylab import *\r\n","import os\r\n","import time\r\n","import numpy as np\r\n","        \r\n","path='/content/drive/MyDrive/basic_emotion/cut_result'\r\n","filename='JAFFE_gray'\r\n","folders, x, y= [], [], []\r\n","for root, dirs, files in os.walk(path, topdown=False):\r\n","    for name in dirs:\r\n","        folders.append(name)\r\n","folders = folders[-7:]\r\n","start_time = time.time()\r\n","count = 0\r\n","for fld in folders:\r\n","    index = folders.index(fld)\r\n","    for root, dirs, files in os.walk(path + '/' + fld, topdown=False):\r\n","        for file in files:\r\n","            filepath = root + '/' + file\r\n","            img = cv2.imread(filepath)\r\n","            img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\r\n","            resized = cv2.resize(img, (224, 224), cv2.INTER_LANCZOS4)\r\n","            y.append(index)\r\n","            x.append(resized)\r\n","    print(fld)\r\n","\r\n","np.save('{}_X.npy'.format(filename), x)\r\n","np.save('{}_Y.npy'.format(filename), y)\r\n","print(\"Complete\")\r\n","\r\n"],"execution_count":null,"outputs":[{"output_type":"stream","text":["5\n","6\n","3\n","4\n","1\n","2\n","0\n","Complete\n"],"name":"stdout"}]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "create_data.ipynb",
+      "provenance": [],
+      "mount_file_id": "1GxTjkg2De8sl9FJTq5youiu_m2KJ_UvM",
+      "authorship_tag": "ABX9TyMG3DUdzqEueZo6jU+Ebgz0",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/wujulie/NCHU_basic_emotion/blob/master/create_data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iOXiaoS4EvTR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ecca7e79-5c48-417d-b32d-6028274c9302"
+      },
+      "source": [
+        "import cv2\r\n",
+        "from pylab import *\r\n",
+        "import os\r\n",
+        "import time\r\n",
+        "import numpy as np\r\n",
+        "        \r\n",
+        "path='/content/drive/MyDrive/basic_emotion/cut_result'\r\n",
+        "filename='JAFFE_gray'\r\n",
+        "folders, x, y= [], [], []\r\n",
+        "for root, dirs, files in os.walk(path, topdown=False):\r\n",
+        "    for name in dirs:\r\n",
+        "        folders.append(name)\r\n",
+        "folders = folders[-7:]\r\n",
+        "start_time = time.time()\r\n",
+        "count = 0\r\n",
+        "for fld in folders:\r\n",
+        "    index = folders.index(fld)\r\n",
+        "    for root, dirs, files in os.walk(path + '/' + fld, topdown=False):\r\n",
+        "        for file in files:\r\n",
+        "            filepath = root + '/' + file\r\n",
+        "            img = cv2.imread(filepath)\r\n",
+        "            img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\r\n",
+        "            resized = cv2.resize(img, (224, 224), cv2.INTER_LANCZOS4)\r\n",
+        "            y.append(index)\r\n",
+        "            x.append(resized)\r\n",
+        "    print(fld)\r\n",
+        "\r\n",
+        "np.save('{}_x.npy'.format(filename), x)\r\n",
+        "np.save('{}_y.npy'.format(filename), y)\r\n",
+        "print(\"Complete\")\r\n",
+        "\r\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "6\n",
+            "3\n",
+            "4\n",
+            "1\n",
+            "2\n",
+            "0\n",
+            "Complete\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    }
+  ]
+}
